--- a/src/project-list.scss
+++ b/src/project-list.scss
@@ -10,7 +10,8 @@
 
   ul {
     padding: 0;
-    margin: 0 var(--margin);
+    margin: 0 var(--margin) var(--margin) var(--margin);
+    overflow: auto;
   }
 }
 
